<resources>
    <string name="app_name">Conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_post_article">Write Article</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feed">Global Feed</string>
    <string name="menu_myfeed">Your Feed</string>
    <string name="menu_auth">Login / Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arg_article_id">ARTICLE_ID</string>


</resources>