<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_feed"
        android:name="io.realworld.android.conduit.ui.feed.GlobalFeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_globalfeed_openarticle"
            app:destination="@id/nav_article"
            app:popUpTo="@id/nav_feed">
            <argument android:name="@string/arg_article_id"
                app:argType="string"/>
        </action>
    </fragment>
    <fragment
        android:id="@+id/nav_myfeed"
        android:name="io.realworld.android.conduit.ui.feed.MyFeedFragment"
        android:label="@string/menu_myfeed"
        tools:layout="@layout/fragment_myfeed" >
        <action
            android:id="@+id/action_myfeed_openarticle"
            app:destination="@id/nav_article"
            app:popUpTo="@id/nav_myfeed">
            <argument android:name="@string/arg_article_id"
                app:argType="string"/>
        </action>
    </fragment>
    <fragment
        android:id="@+id/nav_auth"
        android:name="io.realworld.android.conduit.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.realworld.android.conduit.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_article"
        android:name="io.realworld.android.conduit.ui.article.ArticleFragment"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/nav_post_write"
        android:name="io.realworld.android.conduit.ui.article.PostArticleFragment"
        android:label="@string/menu_post_article"
        tools:layout="@layout/fragment_post_article" >
        <action
            android:id="@+id/action_nav_post_write_to_nav_feed"
            app:popUpTo="@id/nav_feed" />
    </fragment>

</navigation>